k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    name: devops
    environment: development
