k8s/vault-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vault-test-pod
  namespace: devops
  annotations:
    vault.hashicorp.com/agent-inject: "true"
    vault.hashicorp.com/agent-inject-secret-config: "secret/data/devops-app/config"
    vault.hashicorp.com/role: "devops-app"
spec:
  serviceAccountName: devops-dev-devops-app
  containers:
  - name: app
    image: busybox
    command: ['sh', '-c', 'echo Container started; sleep 3600']
