k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-python-service
  namespace: devops
  labels:
    app: devops-python
spec:
  type: ClusterIP
  selector:
    app: devops-python
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
